feat: 兼容 Java 8 文件读取方式
- 将 Files.readString 替换为 Files.readAllBytes + String 构造器
- 修复 Java 8 环境下 readString 方法不存在的编译错误